@@ -419,7 +419,7 @@ public class ResidualProgramConstructionAlgorithm implements Algorithm, Statisti
   private void checkCPAConfiguration(final ConfigurableProgramAnalysis pCpa)
       throws InvalidConfigurationException {
     if (pCpa instanceof ARGCPA aRGCPA
-        && aRGCPA.getWrappedCPAs().get(0) instanceof CompositeCPA comCpa) {
+        && aRGCPA.getWrappedCPAs().getFirst() instanceof CompositeCPA comCpa) {
 
       boolean considersLocation = false;
       boolean considersCallstack = false;
