@@ -277,7 +277,7 @@ public class SMGExpressionEvaluator {
     List<SMGExplicitValueAndState> result = evaluateExplicitValue(smgState, cfaEdge, rValue);
 
     if (result.size() == 1) {
-      return result.get(0).getObject();
+      return result.getFirst().getObject();
     } else {
       return SMGUnknownValue.INSTANCE;
     }
