@@ -29,6 +29,7 @@ import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Objects;
+import java.util.SequencedMap;
 import java.util.Set;
 import java.util.logging.Level;
 import org.sosy_lab.common.io.IO;
@@ -56,7 +57,7 @@ public class SMGInterpolationTree {
   private final ARGState root;
 
   /** the predecessor relation of the states contained in this tree */
-  private final Map<ARGState, ARGState> predecessorRelation = new LinkedHashMap<>();
+  private final SequencedMap<ARGState, ARGState> predecessorRelation = new LinkedHashMap<>();
 
   /** the successor relation of the states contained in this tree */
   private final ListMultimap<ARGState, ARGState> successorRelation = ArrayListMultimap.create();
@@ -108,7 +109,7 @@ public class SMGInterpolationTree {
       successorRelation.put(predecessorState, successorState);
     }
 
-    return states.get(0);
+    return states.getFirst();
   }
 
   /** This method builds an actual tree from multiple path. */
@@ -123,7 +124,7 @@ public class SMGInterpolationTree {
       if (currentState.getParents().iterator().hasNext()) {
 
         if (!predecessorRelation.containsKey(currentState)) {
-          ARGState parentState = currentState.getParents().iterator().next();
+          ARGState parentState = currentState.getParents().getFirst();
 
           predecessorRelation.put(currentState, parentState);
           successorRelation.put(parentState, currentState);
@@ -382,7 +383,7 @@ public class SMGInterpolationTree {
 
     @Override
     public ARGPath getNextPathForInterpolation() {
-      ARGState current = sources.remove(0);
+      ARGState current = sources.removeFirst();
 
       assert current.isTarget() : "current element is not a target";
 
