@@ -761,7 +761,7 @@ public abstract class AbstractExpressionValueVisitor
   private Value handleBuiltinFunction2(
       String pName, List<Value> pArguments, BiFunction<FloatValue, FloatValue, Value> pOperation) {
     checkArgument(pArguments.size() == 2);
-    Value parameter1 = pArguments.get(0);
+    Value parameter1 = pArguments.getFirst();
     Value parameter2 = pArguments.get(1);
 
     if (parameter1.isExplicitlyKnown() && parameter2.isExplicitlyKnown()) {
@@ -979,7 +979,7 @@ public abstract class AbstractExpressionValueVisitor
           // We only need the return value and can ignore the integer part that needs to be written
           // to the pointer in the 2nd argument
           if (parameterValues.size() == 2) {
-            Value value = parameterValues.get(0);
+            Value value = parameterValues.getFirst();
             if (value.isExplicitlyKnown()) {
               FloatValue arg =
                   castToFloat(
