@@ -60,6 +60,13 @@ import org.sosy_lab.cpachecker.util.Pair;
  */
 public class PathToCWithLoopsTranslator extends PathTranslator {
 
+  private static final String HEADER_DEFINITIONS =
+      """
+      #include <stdlib.h>
+      #include <time.h>
+      #define __VERIFIER_nondet_int() rand()
+      """;
+
   private static final Pattern uniqueFunction = Pattern.compile(".*_[0-9]+(.*)");
 
   private final LoopStructure loopStructure;
@@ -119,9 +126,7 @@ public class PathToCWithLoopsTranslator extends PathTranslator {
   @Override
   protected Appender generateCCode() {
     // proper order and c-code without warnings
-    mGlobalDefinitionsList.add(0, "#include <stdlib.h>\n");
-    mGlobalDefinitionsList.add(1, "#include <time.h>\n");
-    mGlobalDefinitionsList.add(2, "#define __VERIFIER_nondet_int() rand()");
+    mGlobalDefinitionsList.addFirst(HEADER_DEFINITIONS);
 
     mGlobalDefinitionsList.remove("int __VERIFIER_nondet_int()");
 
@@ -274,8 +279,7 @@ public class PathToCWithLoopsTranslator extends PathTranslator {
             .toList();
 
     // we do not go into a loop that has to be uprolled, so just continue normally
-    if (loopsAfter.isEmpty()
-        || !loopsInPathToRecreate.get(loopsAfter.get(loopsAfter.size() - 1)).contains(state)) {
+    if (loopsAfter.isEmpty() || !loopsInPathToRecreate.get(loopsAfter.getLast()).contains(state)) {
       return processSimpleWithLoop(pCFAEdge, currentBlock, "").trim();
     } else {
       return recreateLoop(pCFAEdge, currentBlock, loopsAfter).getFirst();
@@ -422,9 +426,9 @@ public class PathToCWithLoopsTranslator extends PathTranslator {
 
     // this should be already handled by the handledEdges check at the beginning
     // of the processEdge method
-    assert loopsAfter.get(loopsAfter.size() - 1).getIncomingEdges().contains(pCFAEdge);
+    assert loopsAfter.getLast().getIncomingEdges().contains(pCFAEdge);
 
-    Loop loop = loopsAfter.get(loopsAfter.size() - 1);
+    Loop loop = loopsAfter.getLast();
 
     // create necessary mappings
     String labelStayInLoop = createFreshLabelForLoop(pCFAEdge, loop);
@@ -649,7 +653,7 @@ public class PathToCWithLoopsTranslator extends PathTranslator {
       return;
     }
 
-    Loop newInnerLoop = newLoops.get(newLoops.size() - 1);
+    Loop newInnerLoop = newLoops.getLast();
     if (newInnerLoop.getIncomingEdges().contains(onlyEdge)) {
       String newLabel = createFreshLabelForLoop(onlyEdge, newInnerLoop);
       wholeLoopString.append(newLabel + ": ;\n");
@@ -789,7 +793,7 @@ public class PathToCWithLoopsTranslator extends PathTranslator {
       final CFANode thenNode,
       final CFANode elseNode) {
     return findEndOfBranchesNonRecursive(
-        elseNode, thenNode, functionStart, intermediateFunctionEnds.get(0));
+        elseNode, thenNode, functionStart, intermediateFunctionEnds.getFirst());
   }
 
   private CFANode findEndOfBranchesNonRecursive(
